<resources>
    <string name="app_name">Bazinga</string>

    <string name="str_volley">volley</string>
    <string name="str_volley_upload">volley_upload</string>
    <string name="str_http">http</string>
    <string name="str_textInputLayout">TextInputLayout</string>
    <string name="str_customView">customView</string>
    <string name="str_anim">animate</string>
    <string name="str_viewpager">viewpager</string>
    <string name="str_speech">语音识别</string>
    <string name="action_settings">Settings</string>
    <string name="string_data">string_data_get</string>
    <string name="json_data">json_data_get</string>
    <string name="json_data_post">json_data_post</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="str_no_name">无名氏</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_tab_one">tab_one</string>
    <string name="str_tab_two">tab_two</string>
    <string name="str_tab_three">tab_three</string>
    <string name="str_tab_four">tab_four</string>
    <string name="str_tab_five">tab_five</string>

    <string name="str_group_one">group_one</string>
    <string name="str_group_two">group_two</string>
    <string name="str_group_three">group_three</string>
    <string name="str_one">one</string>
    <string name="str_two">two</string>
    <string name="str_three">three</string>
    <string name="str_four">four</string>
    <string name="str_group_two_menu_one">group_two_menu_one</string>
    <string name="str_group_two_menu_two">group_two_menu_two</string>
    <string name="cancle">撤消</string>

    <string name="str_username">用户名</string>
    <string name="str_username_error">用户名不存在</string>
    <string name="str_password">密码</string>
    <string name="str_password_error">密码错误</string>
    <string name="title_activity_volley_upload">VolleyUploadActivity</string>
    <string name="title_activity_customview">CustomViewActivity</string>

    <string name="str_upload">上传图片</string>

    <string name="str_topbar_title">自定义TopBar</string>
    <string name="str_topbar_left">返回</string>
    <string name="str_bla">blablabla...</string>
    <string name="qrcode_not_found">无法识别,请检查图片</string>
</resources>
