<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mojota.bazinga.OneFragment">

    <Button
        android:id="@+id/bt_volley"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_volley" />

    <Button
        android:id="@+id/bt_volley_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_volley_upload" />

    <Button
        android:id="@+id/bt_textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_textInputLayout" />

    <Button
        android:id="@+id/bt_custom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_customView" />
    <Button
        android:id="@+id/bt_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_anim" />
    <Button
        android:id="@+id/bt_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_viewpager" />
</LinearLayout>
